--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,3 +2,18 @@ h1 {
     text-align: center;
     color: cornflowerblue;
   }
+
+/* h2 {
+    text-align: center;
+}
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+p {
+    text-align: center;
+} */
