Added Edit and Delete buttons with routing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,11 +33,18 @@ body {
     text-align: center;
   }
   
-  main {
+main {
     margin-right: 20px;
     margin-left: 20px;
     background-color: white;
   }
+
+.buttons {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+
+}
 /* h2 {
     text-align: center;
 }
